Yacc_Lex/y.output
Grammar

    0 $accept: programme $end

    1 programme: PROG ACCOLADE_OUVRANTE corps ACCOLADE_FERMANTE

    2 corps: liste_declarations liste_instructions

    3 liste_declarations: liste_declaration_var liste_declaration_type liste_declaration_proc liste_declaration_fct

    4 liste_declaration_var: /* empty */
    5                      | declaration_variable
    6                      | declaration_variable POINT_VIRGULE liste_declaration_var

    7 liste_declaration_type: /* empty */
    8                       | declaration_type
    9                       | declaration_type POINT_VIRGULE liste_declaration_type

   10 liste_declaration_proc: /* empty */
   11                       | declaration_procedure
   12                       | declaration_procedure POINT_VIRGULE liste_declaration_proc

   13 liste_declaration_fct: /* empty */
   14                      | declaration_fonction
   15                      | declaration_fonction POINT_VIRGULE liste_declaration_fct

   16 liste_instructions: DEBUT suite_liste_inst FIN

   17 suite_liste_inst: /* empty */
   18                 | instruction
   19                 | suite_liste_inst POINT_VIRGULE instruction

   20 declaration_type: TYPE IDF DEUX_POINTS suite_declaration_type

   21 suite_declaration_type: STRUCT liste_champs FSTRUCT
   22                       | TABLEAU dimension DE nom_type

   23 dimension: CROCHET_OUVRANT liste_dimensions CROCHET_FERMANT

   24 liste_dimensions: une_dimension
   25                 | liste_dimensions VIRGULE une_dimension

   26 une_dimension: expression POINT POINT expression

   27 liste_champs: un_champ
   28             | liste_champs un_champ

   29 un_champ: IDF DEUX_POINTS nom_type POINT_VIRGULE

   30 nom_type: type_simple
   31         | IDF

   32 type_simple: ENTIER
   33            | REEL
   34            | BOOLEEN
   35            | CARACTERE
   36            | CHAINE CROCHET_OUVRANT CSTE_ENTIERE CROCHET_FERMANT

   37 declaration_variable: VARIABLE IDF DEUX_POINTS nom_type
   38                     | VARIABLE IDF DEUX_POINTS nom_type OPAFF expression

   39 declaration_procedure: PROCEDURE IDF liste_parametres ACCOLADE_OUVRANTE corps ACCOLADE_FERMANTE

   40 declaration_fonction: FONCTION IDF liste_parametres RETOURNE type_simple ACCOLADE_OUVRANTE corps ACCOLADE_FERMANTE

   41 liste_parametres: PARENTHESE_OUVRANTE liste_param PARENTHESE_FERMANTE

   42 liste_param: /* empty */
   43            | un_param
   44            | liste_param POINT_VIRGULE un_param

   45 un_param: IDF DEUX_POINTS type_simple

   46 instruction: affectation
   47            | condition
   48            | tant_que
   49            | repeter_tant_que
   50            | appel
   51            | RETOURNE resultat_retourne

   52 resultat_retourne: /* empty */
   53                  | expression

   54 appel: IDF liste_arguments

   55 liste_arguments: PARENTHESE_OUVRANTE PARENTHESE_FERMANTE
   56                | PARENTHESE_OUVRANTE liste_args PARENTHESE_FERMANTE

   57 liste_args: un_arg
   58           | liste_args VIRGULE un_arg

   59 un_arg: expression

   60 condition: SI PARENTHESE_OUVRANTE expression PARENTHESE_FERMANTE ALORS ACCOLADE_OUVRANTE liste_instructions ACCOLADE_FERMANTE SINON ACCOLADE_OUVRANTE liste_instructions ACCOLADE_FERMANTE

   61 tant_que: TANT_QUE PARENTHESE_OUVRANTE expression PARENTHESE_FERMANTE FAIRE ACCOLADE_OUVRANTE liste_instructions ACCOLADE_FERMANTE

   62 repeter_tant_que: FAIRE ACCOLADE_OUVRANTE liste_instructions ACCOLADE_FERMANTE TANT_QUE PARENTHESE_OUVRANTE expression PARENTHESE_FERMANTE

   63 affectation: variable OPAFF expression

   64 variable: IDF
   65         | IDF variable_suite

   66 variable_suite: CROCHET_OUVRANT liste_expression CROCHET_FERMANT variable_fin

   67 variable_fin: /* empty */
   68             | variable_suite

   69 expression: expression_calcul
   70           | expression expression_logique expression_calcul

   71 expression_calcul: expression_calcul PLUS expression_suite
   72                  | expression_calcul MOINS expression_suite
   73                  | expression_suite

   74 expression_suite: expression_suite MULT expression_fin
   75                 | expression_suite DIV expression_fin
   76                 | expression_fin

   77 expression_fin: PARENTHESE_OUVRANTE expression PARENTHESE_FERMANTE
   78               | constante
   79               | variable
   80               | appel

   81 liste_expression: liste_expression VIRGULE expression
   82                 | expression

   83 constante: CSTE_ENTIERE
   84          | CSTE_REEL
   85          | CSTE_STRING
   86          | CSTE_CHAR
   87          | CSTE_BOOL

   88 expression_logique: PLUS_PETIT
   89                   | PLUS_GRAND
   90                   | ET
   91                   | OU
   92                   | PLUS_PETIT_EGAL
   93                   | PLUS_GRAND_EGAL
   94                   | EGAL
   95                   | DIFFERENT


Terminals, with rules where they appear

$end (0) 0
error (256)
POINT_VIRGULE (258) 6 9 12 15 19 29 44
DEUX_POINTS (259) 20 29 37 38 45
CROCHET_OUVRANT (260) 23 36 66
CROCHET_FERMANT (261) 23 36 66
VIRGULE (262) 25 58 81
POINT (263) 26
PARENTHESE_OUVRANTE (264) 41 55 56 60 61 62 77
PARENTHESE_FERMANTE (265) 41 55 56 60 61 62 77
ACCOLADE_OUVRANTE (266) 1 39 40 60 61 62
ACCOLADE_FERMANTE (267) 1 39 40 60 61 62
CSTE_ENTIERE (268) 36 83
CSTE_REEL (269) 84
CSTE_STRING (270) 85
CSTE_CHAR (271) 86
CSTE_BOOL (272) 87
ENTIER (273) 32
REEL (274) 33
BOOLEEN (275) 34
CARACTERE (276) 35
CHAINE (277) 36
PLUS_PETIT (278) 88
PLUS_GRAND (279) 89
ET (280) 90
OU (281) 91
PLUS_PETIT_EGAL (282) 92
PLUS_GRAND_EGAL (283) 93
EGAL (284) 94
DIFFERENT (285) 95
PLUS (286) 71
MOINS (287) 72
MULT (288) 74
DIV (289) 75
TANT_QUE (290) 61 62
FAIRE (291) 61 62
SI (292) 60
ALORS (293) 60
SINON (294) 60
VARIABLE (295) 37 38
TYPE (296) 20
STRUCT (297) 21
FSTRUCT (298) 21
TABLEAU (299) 22
DE (300) 22
PROCEDURE (301) 39
FONCTION (302) 40
RETOURNE (303) 40 51
OPAFF (304) 38 63
PROG (305) 1
DEBUT (306) 16
FIN (307) 16
IDF (308) 20 29 31 37 38 39 40 45 54 64 65


Nonterminals, with rules where they appear

$accept (54)
    on left: 0
programme (55)
    on left: 1, on right: 0
corps (56)
    on left: 2, on right: 1 39 40
liste_declarations (57)
    on left: 3, on right: 2
liste_declaration_var (58)
    on left: 4 5 6, on right: 3 6
liste_declaration_type (59)
    on left: 7 8 9, on right: 3 9
liste_declaration_proc (60)
    on left: 10 11 12, on right: 3 12
liste_declaration_fct (61)
    on left: 13 14 15, on right: 3 15
liste_instructions (62)
    on left: 16, on right: 2 60 61 62
suite_liste_inst (63)
    on left: 17 18 19, on right: 16 19
declaration_type (64)
    on left: 20, on right: 8 9
suite_declaration_type (65)
    on left: 21 22, on right: 20
dimension (66)
    on left: 23, on right: 22
liste_dimensions (67)
    on left: 24 25, on right: 23 25
une_dimension (68)
    on left: 26, on right: 24 25
liste_champs (69)
    on left: 27 28, on right: 21 28
un_champ (70)
    on left: 29, on right: 27 28
nom_type (71)
    on left: 30 31, on right: 22 29 37 38
type_simple (72)
    on left: 32 33 34 35 36, on right: 30 40 45
declaration_variable (73)
    on left: 37 38, on right: 5 6
declaration_procedure (74)
    on left: 39, on right: 11 12
declaration_fonction (75)
    on left: 40, on right: 14 15
liste_parametres (76)
    on left: 41, on right: 39 40
liste_param (77)
    on left: 42 43 44, on right: 41 44
un_param (78)
    on left: 45, on right: 43 44
instruction (79)
    on left: 46 47 48 49 50 51, on right: 18 19
resultat_retourne (80)
    on left: 52 53, on right: 51
appel (81)
    on left: 54, on right: 50 80
liste_arguments (82)
    on left: 55 56, on right: 54
liste_args (83)
    on left: 57 58, on right: 56 58
un_arg (84)
    on left: 59, on right: 57 58
condition (85)
    on left: 60, on right: 47
tant_que (86)
    on left: 61, on right: 48
repeter_tant_que (87)
    on left: 62, on right: 49
affectation (88)
    on left: 63, on right: 46
variable (89)
    on left: 64 65, on right: 63 79
variable_suite (90)
    on left: 66, on right: 65 68
variable_fin (91)
    on left: 67 68, on right: 66
expression (92)
    on left: 69 70, on right: 26 38 53 59 60 61 62 63 70 77 81 82
expression_calcul (93)
    on left: 71 72 73, on right: 69 70 71 72
expression_suite (94)
    on left: 74 75 76, on right: 71 72 73 74 75
expression_fin (95)
    on left: 77 78 79 80, on right: 74 75 76
liste_expression (96)
    on left: 81 82, on right: 66 81
constante (97)
    on left: 83 84 85 86 87, on right: 78
expression_logique (98)
    on left: 88 89 90 91 92 93 94 95, on right: 70


state 0

    0 $accept: . programme $end

    PROG  shift, and go to state 1

    programme  go to state 2


state 1

    1 programme: PROG . ACCOLADE_OUVRANTE corps ACCOLADE_FERMANTE

    ACCOLADE_OUVRANTE  shift, and go to state 3


state 2

    0 $accept: programme . $end

    $end  shift, and go to state 4


state 3

    1 programme: PROG ACCOLADE_OUVRANTE . corps ACCOLADE_FERMANTE

    VARIABLE  shift, and go to state 5

    $default  reduce using rule 4 (liste_declaration_var)

    corps                  go to state 6
    liste_declarations     go to state 7
    liste_declaration_var  go to state 8
    declaration_variable   go to state 9


state 4

    0 $accept: programme $end .

    $default  accept


state 5

   37 declaration_variable: VARIABLE . IDF DEUX_POINTS nom_type
   38                     | VARIABLE . IDF DEUX_POINTS nom_type OPAFF expression

    IDF  shift, and go to state 10


state 6

    1 programme: PROG ACCOLADE_OUVRANTE corps . ACCOLADE_FERMANTE

    ACCOLADE_FERMANTE  shift, and go to state 11


state 7

    2 corps: liste_declarations . liste_instructions

    DEBUT  shift, and go to state 12

    liste_instructions  go to state 13


state 8

    3 liste_declarations: liste_declaration_var . liste_declaration_type liste_declaration_proc liste_declaration_fct

    TYPE  shift, and go to state 14

    $default  reduce using rule 7 (liste_declaration_type)

    liste_declaration_type  go to state 15
    declaration_type        go to state 16


state 9

    5 liste_declaration_var: declaration_variable .
    6                      | declaration_variable . POINT_VIRGULE liste_declaration_var

    POINT_VIRGULE  shift, and go to state 17

    $default  reduce using rule 5 (liste_declaration_var)


state 10

   37 declaration_variable: VARIABLE IDF . DEUX_POINTS nom_type
   38                     | VARIABLE IDF . DEUX_POINTS nom_type OPAFF expression

    DEUX_POINTS  shift, and go to state 18


state 11

    1 programme: PROG ACCOLADE_OUVRANTE corps ACCOLADE_FERMANTE .

    $default  reduce using rule 1 (programme)


state 12

   16 liste_instructions: DEBUT . suite_liste_inst FIN

    TANT_QUE  shift, and go to state 19
    FAIRE     shift, and go to state 20
    SI        shift, and go to state 21
    RETOURNE  shift, and go to state 22
    IDF       shift, and go to state 23

    $default  reduce using rule 17 (suite_liste_inst)

    suite_liste_inst  go to state 24
    instruction       go to state 25
    appel             go to state 26
    condition         go to state 27
    tant_que          go to state 28
    repeter_tant_que  go to state 29
    affectation       go to state 30
    variable          go to state 31


state 13

    2 corps: liste_declarations liste_instructions .

    $default  reduce using rule 2 (corps)


state 14

   20 declaration_type: TYPE . IDF DEUX_POINTS suite_declaration_type

    IDF  shift, and go to state 32


state 15

    3 liste_declarations: liste_declaration_var liste_declaration_type . liste_declaration_proc liste_declaration_fct

    PROCEDURE  shift, and go to state 33

    $default  reduce using rule 10 (liste_declaration_proc)

    liste_declaration_proc  go to state 34
    declaration_procedure   go to state 35


state 16

    8 liste_declaration_type: declaration_type .
    9                       | declaration_type . POINT_VIRGULE liste_declaration_type

    POINT_VIRGULE  shift, and go to state 36

    $default  reduce using rule 8 (liste_declaration_type)


state 17

    6 liste_declaration_var: declaration_variable POINT_VIRGULE . liste_declaration_var

    VARIABLE  shift, and go to state 5

    $default  reduce using rule 4 (liste_declaration_var)

    liste_declaration_var  go to state 37
    declaration_variable   go to state 9


state 18

   37 declaration_variable: VARIABLE IDF DEUX_POINTS . nom_type
   38                     | VARIABLE IDF DEUX_POINTS . nom_type OPAFF expression

    ENTIER     shift, and go to state 38
    REEL       shift, and go to state 39
    BOOLEEN    shift, and go to state 40
    CARACTERE  shift, and go to state 41
    CHAINE     shift, and go to state 42
    IDF        shift, and go to state 43

    nom_type     go to state 44
    type_simple  go to state 45


state 19

   61 tant_que: TANT_QUE . PARENTHESE_OUVRANTE expression PARENTHESE_FERMANTE FAIRE ACCOLADE_OUVRANTE liste_instructions ACCOLADE_FERMANTE

    PARENTHESE_OUVRANTE  shift, and go to state 46


state 20

   62 repeter_tant_que: FAIRE . ACCOLADE_OUVRANTE liste_instructions ACCOLADE_FERMANTE TANT_QUE PARENTHESE_OUVRANTE expression PARENTHESE_FERMANTE

    ACCOLADE_OUVRANTE  shift, and go to state 47


state 21

   60 condition: SI . PARENTHESE_OUVRANTE expression PARENTHESE_FERMANTE ALORS ACCOLADE_OUVRANTE liste_instructions ACCOLADE_FERMANTE SINON ACCOLADE_OUVRANTE liste_instructions ACCOLADE_FERMANTE

    PARENTHESE_OUVRANTE  shift, and go to state 48


state 22

   51 instruction: RETOURNE . resultat_retourne

    PARENTHESE_OUVRANTE  shift, and go to state 49
    CSTE_ENTIERE         shift, and go to state 50
    CSTE_REEL            shift, and go to state 51
    CSTE_STRING          shift, and go to state 52
    CSTE_CHAR            shift, and go to state 53
    CSTE_BOOL            shift, and go to state 54
    IDF                  shift, and go to state 23

    $default  reduce using rule 52 (resultat_retourne)

    resultat_retourne  go to state 55
    appel              go to state 56
    variable           go to state 57
    expression         go to state 58
    expression_calcul  go to state 59
    expression_suite   go to state 60
    expression_fin     go to state 61
    constante          go to state 62


state 23

   54 appel: IDF . liste_arguments
   64 variable: IDF .
   65         | IDF . variable_suite

    CROCHET_OUVRANT      shift, and go to state 63
    PARENTHESE_OUVRANTE  shift, and go to state 64

    $default  reduce using rule 64 (variable)

    liste_arguments  go to state 65
    variable_suite   go to state 66


state 24

   16 liste_instructions: DEBUT suite_liste_inst . FIN
   19 suite_liste_inst: suite_liste_inst . POINT_VIRGULE instruction

    POINT_VIRGULE  shift, and go to state 67
    FIN            shift, and go to state 68


state 25

   18 suite_liste_inst: instruction .

    $default  reduce using rule 18 (suite_liste_inst)


state 26

   50 instruction: appel .

    $default  reduce using rule 50 (instruction)


state 27

   47 instruction: condition .

    $default  reduce using rule 47 (instruction)


state 28

   48 instruction: tant_que .

    $default  reduce using rule 48 (instruction)


state 29

   49 instruction: repeter_tant_que .

    $default  reduce using rule 49 (instruction)


state 30

   46 instruction: affectation .

    $default  reduce using rule 46 (instruction)


state 31

   63 affectation: variable . OPAFF expression

    OPAFF  shift, and go to state 69


state 32

   20 declaration_type: TYPE IDF . DEUX_POINTS suite_declaration_type

    DEUX_POINTS  shift, and go to state 70


state 33

   39 declaration_procedure: PROCEDURE . IDF liste_parametres ACCOLADE_OUVRANTE corps ACCOLADE_FERMANTE

    IDF  shift, and go to state 71


state 34

    3 liste_declarations: liste_declaration_var liste_declaration_type liste_declaration_proc . liste_declaration_fct

    FONCTION  shift, and go to state 72

    $default  reduce using rule 13 (liste_declaration_fct)

    liste_declaration_fct  go to state 73
    declaration_fonction   go to state 74


state 35

   11 liste_declaration_proc: declaration_procedure .
   12                       | declaration_procedure . POINT_VIRGULE liste_declaration_proc

    POINT_VIRGULE  shift, and go to state 75

    $default  reduce using rule 11 (liste_declaration_proc)


state 36

    9 liste_declaration_type: declaration_type POINT_VIRGULE . liste_declaration_type

    TYPE  shift, and go to state 14

    $default  reduce using rule 7 (liste_declaration_type)

    liste_declaration_type  go to state 76
    declaration_type        go to state 16


state 37

    6 liste_declaration_var: declaration_variable POINT_VIRGULE liste_declaration_var .

    $default  reduce using rule 6 (liste_declaration_var)


state 38

   32 type_simple: ENTIER .

    $default  reduce using rule 32 (type_simple)


state 39

   33 type_simple: REEL .

    $default  reduce using rule 33 (type_simple)


state 40

   34 type_simple: BOOLEEN .

    $default  reduce using rule 34 (type_simple)


state 41

   35 type_simple: CARACTERE .

    $default  reduce using rule 35 (type_simple)


state 42

   36 type_simple: CHAINE . CROCHET_OUVRANT CSTE_ENTIERE CROCHET_FERMANT

    CROCHET_OUVRANT  shift, and go to state 77


state 43

   31 nom_type: IDF .

    $default  reduce using rule 31 (nom_type)


state 44

   37 declaration_variable: VARIABLE IDF DEUX_POINTS nom_type .
   38                     | VARIABLE IDF DEUX_POINTS nom_type . OPAFF expression

    OPAFF  shift, and go to state 78

    $default  reduce using rule 37 (declaration_variable)


state 45

   30 nom_type: type_simple .

    $default  reduce using rule 30 (nom_type)


state 46

   61 tant_que: TANT_QUE PARENTHESE_OUVRANTE . expression PARENTHESE_FERMANTE FAIRE ACCOLADE_OUVRANTE liste_instructions ACCOLADE_FERMANTE

    PARENTHESE_OUVRANTE  shift, and go to state 49
    CSTE_ENTIERE         shift, and go to state 50
    CSTE_REEL            shift, and go to state 51
    CSTE_STRING          shift, and go to state 52
    CSTE_CHAR            shift, and go to state 53
    CSTE_BOOL            shift, and go to state 54
    IDF                  shift, and go to state 23

    appel              go to state 56
    variable           go to state 57
    expression         go to state 79
    expression_calcul  go to state 59
    expression_suite   go to state 60
    expression_fin     go to state 61
    constante          go to state 62


state 47

   62 repeter_tant_que: FAIRE ACCOLADE_OUVRANTE . liste_instructions ACCOLADE_FERMANTE TANT_QUE PARENTHESE_OUVRANTE expression PARENTHESE_FERMANTE

    DEBUT  shift, and go to state 12

    liste_instructions  go to state 80


state 48

   60 condition: SI PARENTHESE_OUVRANTE . expression PARENTHESE_FERMANTE ALORS ACCOLADE_OUVRANTE liste_instructions ACCOLADE_FERMANTE SINON ACCOLADE_OUVRANTE liste_instructions ACCOLADE_FERMANTE

    PARENTHESE_OUVRANTE  shift, and go to state 49
    CSTE_ENTIERE         shift, and go to state 50
    CSTE_REEL            shift, and go to state 51
    CSTE_STRING          shift, and go to state 52
    CSTE_CHAR            shift, and go to state 53
    CSTE_BOOL            shift, and go to state 54
    IDF                  shift, and go to state 23

    appel              go to state 56
    variable           go to state 57
    expression         go to state 81
    expression_calcul  go to state 59
    expression_suite   go to state 60
    expression_fin     go to state 61
    constante          go to state 62


state 49

   77 expression_fin: PARENTHESE_OUVRANTE . expression PARENTHESE_FERMANTE

    PARENTHESE_OUVRANTE  shift, and go to state 49
    CSTE_ENTIERE         shift, and go to state 50
    CSTE_REEL            shift, and go to state 51
    CSTE_STRING          shift, and go to state 52
    CSTE_CHAR            shift, and go to state 53
    CSTE_BOOL            shift, and go to state 54
    IDF                  shift, and go to state 23

    appel              go to state 56
    variable           go to state 57
    expression         go to state 82
    expression_calcul  go to state 59
    expression_suite   go to state 60
    expression_fin     go to state 61
    constante          go to state 62


state 50

   83 constante: CSTE_ENTIERE .

    $default  reduce using rule 83 (constante)


state 51

   84 constante: CSTE_REEL .

    $default  reduce using rule 84 (constante)


state 52

   85 constante: CSTE_STRING .

    $default  reduce using rule 85 (constante)


state 53

   86 constante: CSTE_CHAR .

    $default  reduce using rule 86 (constante)


state 54

   87 constante: CSTE_BOOL .

    $default  reduce using rule 87 (constante)


state 55

   51 instruction: RETOURNE resultat_retourne .

    $default  reduce using rule 51 (instruction)


state 56

   80 expression_fin: appel .

    $default  reduce using rule 80 (expression_fin)


state 57

   79 expression_fin: variable .

    $default  reduce using rule 79 (expression_fin)


state 58

   53 resultat_retourne: expression .
   70 expression: expression . expression_logique expression_calcul
